--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,28 +12,24 @@
 
 <body>
     <main class="main">
-        <section class="bg-image">
-            <header>
-                <div>
-                    <img src="images/logo/logo.png" alt="logo">
-                </div>
-            </header>
 
-            <section class="section">
-                <article class="article">
-                    <h1>Want to be your own boss?</h1>
+        <header>
+            <img src="images/logo/logo.png" alt="logo" width="150" height="150">
+        </header>
 
-                    <p>Start today and make up to $30/hr driving your own vehicle with Dash!</p>
-                </article>
+        <section class="boss">
+            <article class="article">
+                <h1>Want to be your own boss?</h1>
 
-                <section class="article">
-                    <img src="images/bg-image/scooter.svg" alt="scooter">
-                </section>
+                <p>Start today and make up to $30/hr driving your own vehicle with Dash!</p>
+            </article>
 
-                <form class="applynow">
-                    <h2>Apply now</h2>
-                    <h3>Enter your info below.</h3>
-
+            <article>
+                <form class="form">
+                    <div class="text">
+                        <h2>Apply now</h2>
+                        <h3>Enter your info below.</h3>
+                    </div>
                     <fieldset>
                         <input type="text" name="fname" id="fname" placeholder="First Name">
                     </fieldset>
@@ -50,40 +46,42 @@
                         <input type="checkbox" name="terms"> I agree to the dash terms
                     </fieldset>
 
-                    <button class="green button">DRIVE WITH US</button>
+                    <button class="greenbutton">DRIVE WITH US</button>
 
                     <p>Already applied? <a href="#">Check your application status here</a></p>
 
                 </form>
-                
-            </section>
-        </div>
-        <footer>
-            <h2>
-                See how much you can earn with Dash.
-            </h2>
-            <h3>how many hours do you want to drive with us this week?</h3>
+            </article>
+        </section>
+
+    </main>
+    <footer>
+        <div class="container">
+            <div class="earn">
+                <h2>See how much you can earn with Dash.</h2>
+                <h3>how many hours do you want to drive with us this week?</h3>
+            </div>
 
             <!-- inset a table to calculate hours and city below-->
-            <form>
-                <div class="form-group">
-                    <input type="text" id="hours" name="hours" placeholder="Hours">
-                    <input type="text" id="city" name="city" placeholder="City">
-                    <button class="red button">Calulate</button>
-                </div>
-            </form>
+
+            <div class="form-group">
+                
+                <input type="text" id="hours" name="hours" placeholder="Hours" class="calc">
+                <input type="text" id="city" name="city" placeholder="City" class="calc">
+                <button class="redbutton calc" >CALCULATE</button>
+            </div>
+
 
             <!-- Insert social media icons -->
 
             <div class="social">
                 <img src="images/icons/facebook.svg" alt="facebook">
-                <img src="images/icons/instagram.svg" alt="instagram">
+                <img src="images/icons/instagram.svg" alt="instagram" >
                 <img src="images/icons/linkedin.svg" alt="linkedin">
                 <img src="images/icons/twitter.svg" alt="twitter">
             </div>
-        </footer>
-
-    </main>
+        </div>
+    </footer>
 </body>
 
 
