completed and uploaded

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dash</title>
+    <!-- Add the favicon for header -->
     <link rel="icon" href="images/favicon.ico" type='image/x-icon'>
     <link rel="stylesheet" href="normalize/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -16,6 +17,8 @@
         <header>
             <img src="images/logo/logo.png" alt="logo" width="150" height="150">
         </header>
+        <!-- Create main section for grid display -->
+        <!-- desktop view *text and table side by side* -->
 
         <section class="boss">
             <article class="article">
@@ -30,6 +33,8 @@
                         <h2>Apply now</h2>
                         <h3>Enter your info below.</h3>
                     </div>
+
+                    <!--  -->
                     <fieldset>
                         <input type="text" name="fname" id="fname" placeholder="First Name">
                     </fieldset>
@@ -56,27 +61,24 @@
 
     </main>
     <footer>
+
+        <div class="earn">
+            <h2>See how much you can earn with Dash.</h2>
+            <h3>how many hours do you want to drive with us this week?</h3>
+        </div>
+
+        <!-- inset a table to calculate hours and city below-->
         <div class="container">
-            <div class="earn">
-                <h2>See how much you can earn with Dash.</h2>
-                <h3>how many hours do you want to drive with us this week?</h3>
-            </div>
-
-            <!-- inset a table to calculate hours and city below-->
-
             <div class="form-group">
-                
                 <input type="text" id="hours" name="hours" placeholder="Hours" class="calc">
                 <input type="text" id="city" name="city" placeholder="City" class="calc">
-                <button class="redbutton calc" >CALCULATE</button>
+                <button class="redbutton calc">CALCULATE</button>
             </div>
-
-
             <!-- Insert social media icons -->
 
             <div class="social">
                 <img src="images/icons/facebook.svg" alt="facebook">
-                <img src="images/icons/instagram.svg" alt="instagram" >
+                <img src="images/icons/instagram.svg" alt="instagram">
                 <img src="images/icons/linkedin.svg" alt="linkedin">
                 <img src="images/icons/twitter.svg" alt="twitter">
             </div>
