--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -34,7 +34,7 @@
                         <h3>Enter your info below.</h3>
                     </div>
 
-                    <!--  -->
+                    <!-- Set Dash fieldset with fname/lname/pnumber/email -->
                     <fieldset>
                         <input type="text" name="fname" id="fname" placeholder="First Name">
                     </fieldset>
